Fixed some UI alignment issues

--- a/DemocraticDJ/ddj/src/app/app.scss
+++ b/DemocraticDJ/ddj/src/app/app.scss
@@ -61,3 +61,15 @@
 .delete {
   background-color: #f53d3d;
 }
+
+.center {
+  align-items: center;
+}
+
+.item {
+  padding-left: 0;
+}
+
+.ion-app {
+  font-family: "Roboto", sans-serif;
+}
